# raspberry-camera-v2

./: .gitignore  Cargo.toml  README.md  TROUBLESHOOTING.md
.github/workflows/: build.yml
src/: config.rs  main.rs
src/camera/: libcamera.rs  mod.rs
src/web/: handlers.rs  mod.rs  stream.rs
static/: app.js  style.css
